--- a/package.json
+++ b/package.json
@@ -10,22 +10,19 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "next": "14.0.0",
+    "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8",
-    "autoprefixer": "^10"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "14.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "eslint-config-next": "13.5.6",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
